# detached-IMAS-Standard-Names

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  standardnames.yml  submission.json
.github/ISSUE_TEMPLATE/: standard-name.yml
.github/actions/check-branch/: action.yml
.github/actions/commit-issue/: action.yml
.github/actions/fetch-standardnames/: action.yml
.github/actions/label-issue/: action.yml
.github/actions/parse-issue/: action.yml
.github/actions/process-issue/: action.yml
.github/actions/raise-pull-request/: action.yml
.github/workflows/: commit-issue.yml  imas-standard-name.yml  label-issue.yml  merge-issue.yml  parse-issue.yml  python-package.yml
docs/: generic_names.csv  guidelines.md  index.md  transformations.csv
imas_standard_names/: __init__.py  scripts.py  standard_name.py
tests/: test_scripts.py  test_standard_name.py
